[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/AnimationFrames/monghe.tres" type="SpriteFrames" id=2]
[ext_resource path="res://src/Actors/Players/Player.gd" type="Script" id=4]
[ext_resource path="res://assets/Sounds/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://src/UI/FX/ShakeCamera.gd" type="Script" id=7]
[ext_resource path="res://assets/Sounds/coin.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.9885
height = 68.025

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.3987, 73.623 )

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 0.466517, 0.258816 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.6 ), Vector2( 1, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ) ]
}

[node name="Player" instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" parent="." index="0"]
frames = ExtResource( 2 )
playing = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 4, 5 )
shape = SubResource( 1 )

[node name="Jump" type="AudioStreamPlayer" parent="Sounds" index="1"]
stream = ExtResource( 6 )

[node name="Pickup" type="AudioStreamPlayer" parent="Sounds" index="2"]
stream = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector" index="0"]
shape = SubResource( 2 )

[node name="AnimationPlayer" parent="." index="4"]
autoplay = ""
anims/warp = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." index="5"]
current = true
script = ExtResource( 7 )
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
